--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.0",
     "@reduxjs/toolkit": "^2.5.0",
     "next": "15.1.4",
     "react": "^19.0.0",
@@ -16,6 +19,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-multi-carousel": "^2.8.5",
+    "react-paginate": "^8.2.0",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.3"
   },
